--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
 	<meta charset=utf-8 />
-	<title>Web Page Template</title>
+	<title>Lexington KY hometwon map</title>
 	<meta name='viewport' content='initial-scale=1,maximum-scale=1,user-scalable=no' />
 
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.css" />
@@ -68,7 +68,7 @@
 </head>
 
 <body>
-<h1>We Lit!!<h1>
+<h1> Lexington,KY: Home of The Flying Purple People Eaters <h1>
 <section>
 
 	<h1>We Lit</h1>
@@ -107,7 +107,7 @@
 		}).addTo(map);
 
 		// write a custom message for the Leaflet tooltip
-		var message = 'Lexington is awesome!';
+		var message = 'Lexington is ehhhh!';
 
 		// add a marker to the center of the map and open the tooltip
 		L.marker(map.getCenter())
